def r/all, overlapping fixed exit, Zenitsu

--- a/src/components/thoughts.css
+++ b/src/components/thoughts.css
@@ -116,4 +116,9 @@
 	max-width: 400px;
 	max-height: 400px;
 	padding: 0.5em 0em;
+	transition: width 2s, height 2s, transform 0.5s;
+}
+
+.post-img:hover {
+	transform: scale(1.02);
 }
